add mid-level sizing for post-drag form view

--- a/src/base/static/scss/_media.scss
+++ b/src/base/static/scss/_media.scss
@@ -103,6 +103,15 @@
         }
     }
 
+    .content-expanded-mid {
+        #map-container {
+            height: 50%;
+        }
+        #content {
+            min-height: 90%;
+        }
+    }
+
     .content-visible.right-sidebar-visible #right-sidebar {
         display: none;
     }
