--- a/src/base/templates/base.html
+++ b/src/base/templates/base.html
@@ -200,6 +200,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.marionette/1.6.1/backbone.marionette.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/esri-leaflet/1.0.3/esri-leaflet.js"></script>
+  <script src="//cdn.jsdelivr.net/leaflet.esri.renderers/1.0.0/esri-leaflet-renderers.js"></script>
   <script src="//cdn.quilljs.com/1.1.4/quill.js"></script>
   <!-- jQuery date-time picker plugin -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.3/build/jquery.datetimepicker.full.js"></script>
@@ -215,6 +216,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.marionette/1.6.1/backbone.marionette.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/esri-leaflet/1.0.3/esri-leaflet.js"></script>
+  <script src="//cdn.jsdelivr.net/leaflet.esri.renderers/1.0.0/esri-leaflet-renderers.js"></script>
   <script src="//cdn.quilljs.com/1.1.4/quill.min.js"></script>
   <!-- jQuery date-time picker plugin -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.3/build/jquery.datetimepicker.full.min.js"></script>
