--- a/src/flavors/pboakland/static/css/custom.css
+++ b/src/flavors/pboakland/static/css/custom.css
@@ -69,6 +69,35 @@ label {
 /* =Media Queries
 -------------------------------------------------------------- */
 
+@media only screen and (min-width: 60em) {
+  /* add places button in header styles */
+  .page-visible #main-btns-container {
+    display: block;
+    position: relative;
+    top: 3px;
+    left: 15px;
+    float: left;
+    padding: 0;
+    font-size: 0.875em !important;
+  }
+  .page-visible #add-place {
+    padding-left: 0.4em !important;
+    padding-right: 0.4em !important;
+    padding-top: 0.3em !important;
+    padding-bottom: 0.3em !important;
+  }
+  .page-visible #add-place span {
+    font-size: 0.875em !important;
+  }
+  .page-visible #add-place-btn-container {
+    padding: 0;
+  }
+  .list-visible #main-btns-container {
+    display: none;
+  }
+
+}
+
 @media only screen and (max-width: 60em) {
     html, body, #map {
         height: 100%;
@@ -90,6 +119,15 @@ label {
 
     #site-title-image {
       content: url("images/pblogo.png");
+    }
+
+    #main-btns-container {
+      left: 0 !important;
+      display: fixed !important;
+    }
+
+    .list-toggle-nav {
+      display: none !important;
     }
 }
 
