--- a/src/base/static/scss/_sidebar.scss
+++ b/src/base/static/scss/_sidebar.scss
@@ -64,6 +64,7 @@
     overflow: auto;
     box-shadow: (-0.325em) 0 0 $opacity-very-low-black;
     z-index: 10;
+    background-color: white;
     
 }
 
