--- a/src/base/static/scss/_buttons.scss
+++ b/src/base/static/scss/_buttons.scss
@@ -331,7 +331,7 @@ button.sp-selected {
 /* Place detail editor */
 .editor-btn {
     box-shadow: -2px 2px 3px #CCCCCC;
-    background-image: linear-gradient(top, #f0ad4e, #e99a00);
+    background-image: linear-gradient(#f0ad4e, #e99a00);
     border: none;
     background-color: #f0ad4e;
     color: white;
@@ -345,7 +345,7 @@ button.sp-selected {
 }
 
 .editor-btn.btn-depressed {
-    background-image: linear-gradient(top, #e99a00, #b97a00);
+    background-image: linear-gradient(#e99a00, #b97a00);
     background-color: #b27600;
     box-shadow: inset 0 0 2px #999999;
 }
@@ -353,10 +353,17 @@ button.sp-selected {
 .btn-update {
     float: right;
     margin-right: 8px;
-    background-image: linear-gradient(top, #449d44, #449d44);
+    background-image: linear-gradient(#449d44, #449d44);
+    opacity: 0.5;
+    cursor: default;
+}
+
+.isModified {
+    opacity: 1.0;
+    cursor: pointer;
 }
 
 .btn-delete {
     float: right;
-    background-image: linear-gradient(top, #c9302c, #c9302c);
+    background-image: linear-gradient(#c9302c, #c9302c);
 }
